# ai-starter-kit

./: .dockerignore  .env  .env-example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE.md  Makefile  README.md  WHITELABELING_GUIDE.md  base-requirements.in  base-requirements.txt  docker-entrypoint.sh  docker-startup.sh  flow.html  mypy.ini  pyproject.toml  report.md  ruff.toml  run_mypy.sh  run_tests.sh  settings.json  test.py  test_upload.txt  u-base-requirements.txt  update_config.py
.github/: dependabot.yml
data_extraction/: README.md  csv_extraction.ipynb  docker-compose.yaml  multidocs_extraction.ipynb  pdf_extraction_non_ocr.ipynb  pdf_extraction_ocr_tables.ipynb  pyproject.toml  qa_qc_util.ipynb  requirements.txt  requirementsPaddle.txt  unstructured_extraction.ipynb
data_extraction/data/sample_data/sample_files/: tests-example.xls
data_extraction/docker/: Dockerfile  PaddleDockerfile  start.sh  startPaddle.sh
data_extraction/notebooks/: csv_extraction.ipynb  docx_extraction.ipynb  markdown_extraction.ipynb  multidocs_extraction.ipynb  pdf_extraction.ipynb  pdf_extraction_non_ocr.ipynb  pdf_extraction_ocr_tables.ipynb  qa_qc_util.ipynb  retrieval_from_pdf_tables.ipynb  rtf_extraction.ipynb  unstructured_extraction.ipynb  web_extraction.ipynb  xls_extraction.ipynb
data_extraction/parser/: README.md  config.yaml  config_e2e.yaml  parse_shell.py  requirements.txt  samba_parse.py
data_extraction/src/: multi_column.py  multi_column_ocr.py  pdf_table_text_extraction.py
edgar_qna/edgar_qna_streamlit/: app.py  edgar_sec_qa.py  pyproject.toml  requirements.txt  run.sh
financial_agent_crewai/: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
financial_agent_crewai/backend/: Dockerfile  app.py  main.py  requirements.txt  schemas.py
financial_agent_crewai/backend/src/: app.py  main.py  streaming_queue.py
financial_agent_crewai/backend/src/financial_agent_crewai/: config.py
financial_agent_crewai/backend/src/utils/: utilities.py
financial_agent_crewai/backend/utils/: utilities.py
financial_agent_crewai/financial_agent_crewai/cache/: comparison_yfinance_stocks.txt  final_report.md  report_generic_search.txt  report_yfinance_stocks_GOOGL_2024-08-01_2025-02-01.json  report_yfinance_stocks_GOOGL_2024-08-01_2025-02-01.txt  section_report_generic_search.txt  section_report_yfinance_stocks_GOOGL_2024-08-01_2025-02-01.txt
financial_agent_crewai/frontend/: .env.example  .prettierrc  Dockerfile  eslint.config.js  index.html  package.json  tailwind.config.js  tailwind.config.ts
financial_agent_crewai/frontend/src/: Constants.ts  index.css  main.tsx
financial_agent_crewai/frontend/src/components/: AgentOutput.tsx  AgentProgress.tsx  FilePreviews.tsx  FinancialReport.tsx  SearchNotification.tsx  SearchSection.tsx  SettingsModal.tsx  WarningMessage.tsx
financial_agent_crewai/frontend/src/hooks/: useFilteredMessages.ts  useSearch.ts  useStreaming.ts
financial_agent_crewai/frontend/src/pages/: Home.tsx
financial_agent_crewai/frontend/src/stores/: APIKeysStore.ts  ResponseStore.ts  StreamingResponseStore.ts
financial_agent_crewai/frontend/src/styles/: globals.css
financial_agent_crewai/src/: config.py  exceptions.py  llm.py  main.py  monitoring.py
financial_agent_crewai/src/crews/context_analysis_crew/: context_analysis_crew.py
financial_agent_crewai/src/crews/decomposition_crew/: decomposition_crew.py
financial_agent_crewai/src/crews/generic_research_crew/: generic_research_crew.py
financial_agent_crewai/src/crews/information_extraction_crew/: information_extraction_crew.py
financial_agent_crewai/src/crews/rag_crew/: rag_crew.py
financial_agent_crewai/src/crews/report_crew/: report_crew.py
financial_agent_crewai/src/crews/sec_edgar_crew/: sec_edgar_crew.py
financial_agent_crewai/src/crews/sorting_hat_crew/: sorting_hat_crew.py
financial_agent_crewai/src/crews/summarization_crew/: summarization_crew.py
financial_agent_crewai/src/crews/yfinance_news_crew/: yfinance_news_crew.py
financial_agent_crewai/src/financial_agent_crewai/: config.py  main.py
financial_agent_crewai/src/financial_agent_flow/: config.py  exceptions.py  main.py
financial_agent_crewai/src/streamlit/: streamlit_app.py
financial_agent_crewai/src/tools/: custom_tools.py  general_tools.py  rag_tools.py  report_tools.py  sec_edgar_tools.py  sorting_hat_tools.py  yahoo_finance_news.py  yahoo_finance_news_tools.py  yfinance_news_tools.py  yfinance_stocks_tools.py
financial_agent_crewai/src/utils/: config.py  constants.py  llm.py  utilities.py
financial_agent_crewai/streamlit/: streamlit_app.py
financial_agent_crewai/streamlit/.streamlit/: config.toml
financial_agent_crewai/utils/: utilities.py
financial_agent_crewai/web_app/backend/: .env.example  Dockerfile  app.py  config.py  oauth2.py  requirements.txt  schemas.py  streaming_queue.py
financial_agent_crewai/web_app/frontend/: .prettierrc  Dockerfile  components.json  package.json  vite.config.ts
fine_tuning_embeddings/: README.MD  README.md  config.yaml  fine_tune_embed_model.py  fine_tuning_embed.ipynb  pyproject.toml  requirements.txt  use_sns_embeddings.py
fine_tuning_embeddings/notebooks/: fine_tuning_embed.ipynb
fine_tuning_embeddings/src/: finetune_embedding_model.py  generate_fine_tune_embed_dataset.py
fine_tuning_embeddings/tests/: fine_tune_embeddings_tests.py  generate_fine_tune_embed_dataset_tests.py
web_crawled_data_retriever/: README.md  app.py  config.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
web_crawled_data_retriever/data/my-vector-db/: index.faiss  index.pkl
web_crawled_data_retriever/docker/: Dockerfile
web_crawled_data_retriever/notebooks/: web_crawled_data_retriever.ipynb
web_crawled_data_retriever/src/: web_crawling_retriever.py
web_crawled_data_retriever/streamlit/: app.py
web_crawled_data_retriever/tests/: web_crawling_test.py
workshops/ai_engineer_2024/ekr_rag/: README.md  config.yaml  install_nltk_ssl.py  pyproject.toml  requirements.txt
(+1430 files in other folders)
