[tool.poetry]
name = "ai-starter-kit"
version = "0.1.0"
description = ""
authors = ["Kwasi Ankomah <kwasi.ankomah@sambanovasystems.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "0.2.6"
langchain-core = ">=0.2.6,<0.3.0"
langchain-community = "0.2.6"
langchain-experimental = "0.0.60"
pydantic = "2.7.0"
pydantic-core = "2.18.1"
python-dotenv = "1.0.1"
streamlit = "1.36.0"
streamlit-extras = "0.3.6"
sseclient-py = "1.8.0"
scikit-learn = "1.4.1.post1"
transformers = "4.41.2"
sentence-transformers = "2.2.2"
instructorembedding = "1.0.1"
datasets = "2.20.0"
evaluate = "0.4.1"
accelerate = "0.27.2"
peft = "0.9.0"
pandas = "2.1.4"
numpy = "1.26.0"
sqlitedict = "2.1.0"
faiss-cpu = "1.7.4"
chromadb = "0.4.24"
pymupdf = "1.23.4"
pymupdfb = "1.23.3"
requests = ">=2.32.2"
aiohttp = "3.9.1"
fastapi = "0.110.1"
uvicorn = "0.23.2"
plotly = "5.19.0"
matplotlib = "3.8.0"
seaborn = "0.12.2"
beautifulsoup4 = "4.12.3"
html2text = "2024.2.26"
unstructured = {version = "0.13.6", extras = ["pdf"]}
unstructured-client = "0.18.0"
unstructured-inference = "0.7.29"
tqdm = ">=4.66.3"
watchdog = "4.0.0"
pillow = "10.2.0"
pycountry = "23.12.11"
omegaconf = "2.3.0"
jsonlines = "4.0.0"
black = "^24.4.2"
serpapi = "0.1.5"
google-search-results = "2.4.2"
nest-asyncio = "1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
