[tool.poetry]
name = "data-extraction"
version = "0.1.0"
description = "AI Starter Kit - Data Extraction"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.9,<3.9.7 || >3.9.7,<3.12"
aiofiles = "23.2.1"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
annotated-types = "0.5.0"
anyio = "3.7.1"
appnope = "0.1.3"
asttokens = "2.4.0"
async-timeout = "4.0.3"
attrs = "23.1.0"
backcall = "0.2.0"
certifi = "2023.7.22"
charset-normalizer = "3.3.0"
ci-info = "0.3.0"
click = "8.1.7"
comm = "0.1.4"
configobj = "5.0.8"
configparser = "6.0.0"
contourpy = "1.1.1"
cycler = "0.12.0"
dataclasses-json = "0.6.3"
debugpy = "1.8.0"
decorator = "5.1.1"
etelemetry = "0.3.0"
exceptiongroup = "1.1.3"
executing = "2.0.0"
filelock = "3.12.4"
fonttools = "4.43.0"
frontend = "0.0.3"
frozenlist = "1.4.0"
future = "0.18.3"
h11 = "0.14.0"
httplib2 = "0.22.0"
idna = "3.4"
ipykernel = "6.25.2"
ipython = "8.16.1"
isodate = "0.6.1"
itsdangerous = "2.1.2"
jedi = "0.19.1"
jsonpatch = "1.33"
jsonpointer = "2.4"
jupyter-client = "8.3.1"
jupyter-core = "5.3.2"
kiwisolver = "1.4.5"
langchain = "0.1.2"
looseversion = "1.3.0"
lxml = "4.9.3"
marshmallow = "3.20.1"
matplotlib = "3.8.0"
matplotlib-inline = "0.1.6"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
nest-asyncio = "1.5.8"
networkx = "3.1"
nibabel = "5.1.0"
nipype = "1.8.6"
numexpr = "2.8.7"
numpy = "1.26.0"
packaging = "23.2"
pandas = "2.1.1"
parso = "0.8.3"
pathlib = "1.0.1"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "10.0.1"
platformdirs = "3.11.0"
prompt-toolkit = "3.0.39"
prov = "2.0.0"
psutil = "5.9.5"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pydantic = "1.10.14"
pydantic-core = "2.10.1"
pydot = "1.4.2"
pygments = "2.16.1"
pymupdf = "1.23.4"
pymupdfb = "1.23.3"
pyparsing = "3.1.1"
pypdf = "3.16.2"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
pyxnat = "1.6"
pyyaml = "6.0.1"
pyzmq = "25.1.1"
rdflib = "7.0.0"
requests = "2.31.0"
scipy = "1.11.3"
simplejson = "3.19.1"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.21"
stack-data = "0.6.3"
starlette = "0.31.1"
tenacity = "8.2.3"
tornado = "6.3.3"
traitlets = "5.11.2"
traits = "6.3.2"
typing-inspect = "0.9.0"
typing-extensions = "4.8.0"
tzdata = "2023.3"
urllib3 = "2.0.6"
uvicorn = "0.23.2"
wcwidth = "0.2.8"
yarl = "1.9.2"
unstructured-inference = "0.7.21"
unstructured = "0.12.0"
unstructured-client = "0.16.0"
pikepdf = "8.11.2"
python-dotenv = "1.0.1"
xlrd = "2.0.1"
python-docx = "1.1.0"
pypandoc = "1.12"
markdown = "3.5.2"
instructorembedding = "1.0.1"
scikit-learn = "1.4.0"
sentencepiece = "0.1.99"
threadpoolctl = "3.2.0"
sentence-transformers = "2.2.2"
faiss-cpu = "1.7.4"
html2text = "2020.1.16"
unstructured-pytesseract = "0.3.12"
chromadb = "0.4.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
