[project]
name = "financial_agent_crewai"
version = "0.1.0"
description = "financial_agent_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
financial_agent_crewai = "financial_agent_crewai.main:run"
run_crew = "financial_agent_crewai.main:run"
train = "financial_agent_crewai.main:train"
replay = "financial_agent_crewai.main:replay"
test = "financial_agent_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
