[project]
name = "financial_agent_crewai"
version = "0.1.0"
description = "Financial Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain-chroma==0.2.2",
    "langchain-core==0.3.41",
    "langchain-huggingface==0.1.2",
    "langchain-sambanova==0.1.2",
    "langtrace-python-sdk==3.8.0",
    "crewai==0.102.0",
    "crewai-tools==0.36.0",
    "Markdown==3.7",
    "pandasai==2.4.2",
    "pre-commit==4.1.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "schedule==1.2.2",
    "sec-downloader==0.12.1",
    "streamlit==1.42.2",
    "weasyprint==64.1",
    "yfinance==0.2.54"
]

[project.scripts]
kickoff = "financial_agent_crewai.main:kickoff"
plot = "financial_agent_crewai.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[tool.hatch.build.targets.wheel]
packages = ["src/financial_agent_crewai"]

