[tool.poetry]
name = "fine-tuning-embeddings"
version = "0.1.0"
description = "AI Starter Kit - Fine Tuning Embeddings"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
llama-index = "^0.9.10"
black = {extras = ["jupyter"], version = "^23.12.0"}
docx2txt = "^0.8"
pypdf = "^3.17.1"
python-dotenv = "^1.0.0"
llama-hub = "^0.0.50"
ipykernel = "^6.27.1"
numexpr = "^2.8.7"
unstructured = "^0.11.2"
spacy = "^3.7.2"
tqdm = "^4.66.1"
redis = "^5.0.1"
transformers = "^4.37.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
langchain = "^0.1.8"
span-marker = "^1.5.0"
instructorembedding = "^1.0.1"
sentence-transformers = "^2.2.2"
chromadb = "^0.4.22"
ipywidgets = "^8.1.1"
setuptools-scm = "^8.0.4"
pandas = "^2.2.0"
pydantic = "1.10.14"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
jq = "^1.6.0"
json-normalize = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"