[tool.poetry]
name = "web-crawled-data-retriever"
version = "0.1.0"
description = "Web Crawler Data Retriever - AI Starter Kit"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
streamlit = "1.25.0"
streamlit-extras = "0.3.6"
langchain = "0.1.2"
sentence-transformers = "2.2.2"
instructorembedding = "1.0.1"
faiss-cpu = "1.7.4"
python-dotenv = "1.0.0"
pydantic = "1.10.14"
pydantic-core = "2.10.1"
beautifulsoup4 = "4.12.3"
html2text = "2020.1.16"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
