[tool.poetry]
name = "edgar-qna-streamlit"
version = "0.1.0"
description = "AI Starter Kit - Edgar Assistant"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
streamlit = "1.25.0"
llama-hub = "0.0.25"
langchain = "0.0.266"
llama-index = "0.8.20"
sentence-transformers = "2.2.2"
instructorembedding = "1.0.1"
beautifulsoup4 = "4.12.2"
chromadb = "0.4.8"
fastapi = "0.99.1"
aiohttp = "3.8.4"
faker = "19.1.0"
ratelimit = "2.2.1"
unstructured = "0.8.1"
python-xbrl = "1.1.1"
sec-edgar-downloader = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
