[tool.poetry]
name = "enterprise-knowledge-retriever"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "1.25.0"
langchain = "0.0.252"
sentence-transformers = "2.2.2"
instructorembedding = "1.0.1"
faiss-cpu = "1.7.4"
pypdf2 = "3.0.1"
python-dotenv = "1.0.0"
streamlit-extras = "^0.3.6"
pillow = "9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
